--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,6 +78,8 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
+    bundleCommand          : "ram-bundle",
+    extraPackagerArgs      : ["--indexed-ram-bundle"],
     enableHermes: false,  // clean and rebuild if changing
 ]
 
