--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@bankify/redux-persist-realm": "^0.1.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-bundle-splitter": "^1.0.9",
+    "react-native-navigation": "^7.7.0",
+    "react-redux": "^7.2.2",
+    "realm": "^10.1.2",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "redux-devtools": "^3.7.0",
+    "redux-logger": "^3.0.6",
+    "babel-plugin-module-resolver": "^4.1.0"
   },
   "jest": {
     "preset": "react-native"
